--- a/index.html
+++ b/index.html
@@ -6,6 +6,6 @@
 href="https://www.w3schools.com/w3css/3/w3.css">
 <body>
 <h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages. Test. </p>
+<p>I'm hosted with GitHub Pages. </p>
 </body>
 </html>
