Adding links to pages

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ href="https://www.w3schools.com/w3css/3/w3.css">
 
 <!-- Navigation -->
 <nav class="w3-bar w3-black">
-  <a href="#home" class="w3-button w3-bar-item">Home</a>
+  <a href="home.html" class="w3-button w3-bar-item">Home</a>
   <a href="#aboutme" class="w3-button w3-bar-item">About</a>
   <a href="#projects" class="w3-button w3-bar-item">Projects</a>
   <a href="#cv" class="w3-button w3-bar-item">CV</a>
