Adding content for each page

--- a/cv.html
+++ b/cv.html
@@ -1,38 +1,112 @@
 <!DOCTYPE html>
 <html>
+<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet"
 href="https://www.w3schools.com/w3css/3/w3.css">
+<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+<style>
+body {
+    font-family: 'Montserrat';font-size: 20px;
+}
+</style>
+<title> Joyce Park - CV </title>
+</head>
 <body>
 
 <!-- Navigation -->
-<nav class="w3-bar w3-black">
-  <a href="index.html" class="w3-button w3-bar-item">Home</a>
-  <a href="about.html" class="w3-button w3-bar-item">About</a>
-  <a href="projects.html" class="w3-button w3-bar-item">Projects</a>
-  <a href="cv.html" class="w3-button w3-bar-item">CV</a>
-  <a href="blog.html" class="w3-button w3-bar-item">Blog</a>
+<nav class="w3-bar w3-white">
+  <a href="index.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-pink">Home</a>
+  <a href="about.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-purple">About</a>
+  <a href="projects.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-orange">Projects</a>
+  <a href="cv.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-blue">CV</a>
+  <a href="blog.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-green">Blog</a>
 </nav>
 
-<!-- CV -->
-<section class="w3-container w3-center w3-content" style="max-width:600px">
-  <h2 class="w3-wide">Curriculum Vitae</h2>
-  <p class="w3-opacity"><i>Lover of cats and stats.</i></p>
-  <p class="w3-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<!-- Description -->
+<section class="w3-container w3-center w3-content" style="max-width:900px">
+  <h1 class="w3-wide w3-jumbo"><b>Curriculum Vitae </b></h1>
+  <!--p class="w3-opacity"><i>joyce.park@uwaterloo.ca</i></p-->
+  <h3 class="w3-center-align">Education</h3>
+  <p class="w3-left-align"><b>BA, University of Waterloo, 2021</b><br>
+    <b>Major:</b> Honours Psychology (Research Intensive Specialization)<br>
+    <b>Minors:</b> Cognitive Science and French<br>
+    <b>Awards:</b> Dean's Honours List, Psychology Undergradute Thesis Award</p>
+
+  <h3 class="w3-center-align">Publications</h3>
+  <p class="w3-left-align"><b>Park, J.</b>, Kelly, M. O., Hargis, M., & Risko, E. F. (under review).
+    Influence of external store reliance on predicted and actual value-directed remembering.
+    Submission ID PBR-BR-21-241</p>
+
+  <h3 class="w3-center-align">Presentations</h3>
+  <p class="w3-left-align"><b>Park, J.</b>, Kelly, M. O., Hargis, M., & Risko, E. F. (2021, July). How the availability of an externa store affects predicted and actual value-directed recall. Talk presented at the Cognitive Offloading Meeting 2021, online.</p>
+  <p class="w3-left-align"><b>Park, J.</b>, Kelly, M. O., Hargis, M., & Risko, E. F. (2021, July). The effects of external store availability and value-directed remembering on predicted and actual recall. Poster session presented at The Annual Meeting of the Society for Applied Research in Memory and Cognition, online.</p>
+  <p class="w3-left-align"><b>Park, J.</b>, Kelly, M. O., & Risko, E. F. (2021, July). The influence of the ability to rely on an external store on value-directed remembering. Poster session presented at the Annual Meeting of the Cognitive Science Society, online.</p>
+  <p class="w3-left-align">Shehan, M., <b>Park, J.</b>, Dunn, L. D., & Risko, E. F. (2021, July). Cognitive effort and preference: A curious case of rotated words. Poster session presented at the Annual Meeting of the Cognitive Science Society, online.</p>
+  <p class="w3-left-align"><b>Park, J.</b>, Kelly, M. O., Hargis, M., & Risko, E. F. (2021, July). Don’t take it at face value: The effect of external store availability on predicted and actual value-directed recall. Poster presented at the annual meeting of the Canadian Society for Brain, Behaviour and Cognitive Science, online.</p>
+  <p class="w3-left-align"><b>Park, J.</b>, Kelly, M. O., & Risko, E. F. (2020, October). The effect of value when offloading memory. Psychology Discovery Conference, online.</p>
+
+  <h3 class="w3-center-align">Research Experience</h3>
+  <p class="w3-left-align">Senior Research Assistant, Cognition and Natural Behaviour Lab <i>(Jan. 2021 – Present)</i></p>
+  <p class="w3-left-align">Directed Studies Student, Danckert Lab <i>(Jan. 2021 – Apr. 2021)</i></p>
+  <p class="w3-left-align">Directed Studies Student, Vision and Attention Lab <i>(Sept 2020 – Dec 2020)</i></p>
+  <p class="w3-left-align">Co-operative Ed. Student, School of Accounting and Finance <i>(May 2020 – Sept. 2020)</i></p>
+  <p class="w3-left-align">Honours Thesis Student, Cognition and Natural Behaviour Lab <i>(May 2019 – Dec. 2020)</i></p>
+  <p class="w3-left-align">Research Assistant, Reasoning and Decision Making Lab <i>(Apr. 2019 – Jan. 2020)</i></p>
+  <p class="w3-left-align">Co-operative Education Student, Sheridan College <i>(Sept. 2019 – Dec. 2019)</i></p>
+  <p class="w3-left-align">Research Assistant, Work-Motivation Lab <i>(Sept. 2018 – Sept. 2019)</i></p>
+
+  <h3 class="w3-center-align">Relevant Work Experience</h3>
+  <p class="w3-left-align">Lab Manager, Cognition and Natural Behaviour Lab <i>(Apr. 2021 – Present)</i></p>
+  <p class="w3-left-align">Online Learning Assistant, University of Waterloo <i>(Apr. 2020 – Aug. 2020)</i></p>
+  <p class="w3-left-align">Child Care Teacher, Groh YMCA <i>(Nov. 2019 – Mar. 2020)</i></p>
+  <p class="w3-left-align">English Learning Assistant, Sheridan College <i>(Sept. 2019 – Dec. 2019)</i></p>
+  <p class="w3-left-align">Policy/Program Analyst, Government of Ontario <i>(Jan. 2019 – Apr. 2019)</i></p>
+  <p class="w3-left-align">Classroom Volunteer, KidsAbility <i>(Sept. 2018 – Dec. 2018)</i></p>
+  <p class="w3-left-align">Teacher’s Assistant, Abraham Erb Public School <i>(Jan. 2018 – Apr. 2018)</i></p>
+  <p class="w3-left-align">Children's Program Instructor, Stork Family YMCA <i>(June 2017 – Nov. 2019)</i></p>
+  <p class="w3-left-align">Classroom Assistant, Early Childhood Education Center <i>(Jan. 2017 – Apr. 2018)</i></p>
+
+  <!--h3 class="w3-center-align">Skills</h3>
+  <h4 class="w3-left-align">Research</h4>
+  <p class="w3-left-align">blah<br>
+  blah<br>
+  blah</p>
+  <h4 class="w3-left-align">Leadership</h4>
+  <p class="w3-left-align">blah<br>
+  blah<br>
+  blah</p-->
+
 </section>
 
 <!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-black w3-xlarge">
+<footer class="w3-container w3-padding-16 w3-center w3-black w3-xlarge">
   <a href="#"><i class="fa fa-facebook-official"></i></a>
   <a href="#"><i class="fa fa-pinterest-p"></i></a>
   <a href="#"><i class="fa fa-twitter"></i></a>
   <a href="#"><i class="fa fa-flickr"></i></a>
   <a href="#"><i class="fa fa-linkedin"></i></a>
-  <p class="w3-medium">
-  Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
+  <p class="w3-medium"> © Joyce Park 2021
   </p>
 </footer>
+<!--script>
+// Automatic Slideshow - change image every 3 seconds
+var myIndex = 0;
+carousel();
+
+function carousel() {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";
+  }
+  myIndex++;
+  if (myIndex > x.length) {myIndex = 1}
+  x[myIndex-1].style.display = "block";
+  setTimeout(carousel, 3000);
+}
+</script-->
 
 </body>
 </html>
