--- a/about.html
+++ b/about.html
@@ -1,43 +1,58 @@
 <!DOCTYPE html>
 <html>
+<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet"
 href="https://www.w3schools.com/w3css/3/w3.css">
+<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+<style>
+body {
+    font-family: 'Montserrat';font-size: 20px;
+}
+</style>
+<title> Joyce Park - About </title>
+</head>
 <body>
 
 <!-- Navigation -->
-<nav class="w3-bar w3-black">
-  <a href="index.html" class="w3-button w3-bar-item">Home</a>
-  <a href="about.html" class="w3-button w3-bar-item">About</a>
-  <a href="projects.html" class="w3-button w3-bar-item">Projects</a>
-  <a href="cv.html" class="w3-button w3-bar-item">CV</a>
-  <a href="blog.html" class="w3-button w3-bar-item">Blog</a>
+<nav class="w3-bar w3-white">
+  <a href="index.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-pink">Home</a>
+  <a href="about.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-purple">About</a>
+  <a href="projects.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-orange">Projects</a>
+  <a href="cv.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-blue">CV</a>
+  <a href="blog.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-green">Blog</a>
 </nav>
 
-<!--Slide Show -->
-<!--section>
-  <img class="mySlides" src="img_la.jpg" style="width:100%">
-  <img class="mySlides" src="img_ny.jpg" style="width:100%">
-  <img class="mySlides" src="img_chicago.jpg" style="width:100%">
-</section-->
-
 <!-- Description -->
-<section class="w3-container w3-center w3-content" style="max-width:600px">
-  <h2 class="w3-wide">Joyce Park</h2>
-  <p class="w3-opacity"><i>Lover of cats and stats.</i></p>
-  <p class="w3-justify">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<section class="w3-container w3-center w3-content" style="max-width:900px">
+  <style>
+img {
+  float: left;
+}
+</style>
+  <h1 class="w3-wide w3-jumbo"><b>About Me</b></h1>
+  <img src="headshot.png" alt="Headshot of Joyce" style="width:250px;height:305px;margin-right:18px;margin-bottom:16px;margin-top:16px">
+  <p class="w3-left-align">Hi there! My name is Joyce and I'm currently a lab manager + researcher at the Cognition and Natural Behaviour Lab.</p>
+  <p class="w3-left-align"><b>Education:</b> BA, University of Waterloo, 2021<br>
+    <b>Major:</b> Honours Psychology (Research Intensive Specialization)<br>
+    <b>Minors:</b> Cognitive Science and French<br>
+    <b>Email:</b> <i>joyce.park@uwaterloo.ca</i></p>
+  <p class="w3-left-align"> Broadly speaking, I’m interested in how we learn and interact with information.
+    Currently, my projects are focused on (1) how the availability of external devices (i.e., notetaking) affects our memory and our metacognitive judgments
+    (2) how we make decisions based on our judgements of effort and (3) the role of online lecture video quality on student learning</p>
+  <p class="w3-left-align">I am looking for opportunities to further explore research in (meta)cognition and decision-making.
+    Specifically, I want to learn more about the factors that influence our judgements of learning and use my research to help inform and improve the educational system.</p>
 </section>
 
 <!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-black w3-xlarge">
+<footer class="w3-container w3-padding-16 w3-center w3-black w3-xlarge">
   <a href="#"><i class="fa fa-facebook-official"></i></a>
   <a href="#"><i class="fa fa-pinterest-p"></i></a>
   <a href="#"><i class="fa fa-twitter"></i></a>
   <a href="#"><i class="fa fa-flickr"></i></a>
   <a href="#"><i class="fa fa-linkedin"></i></a>
-  <p class="w3-medium">
-  Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
+  <p class="w3-medium"> © Joyce Park 2021
   </p>
 </footer>
 <!--script>
