--- a/projects.html
+++ b/projects.html
@@ -1,37 +1,67 @@
 <!DOCTYPE html>
 <html>
+<head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet"
 href="https://www.w3schools.com/w3css/3/w3.css">
+<link href='https://fonts.googleapis.com/css?family=Montserrat' rel='stylesheet'>
+<style>
+body {
+    font-family: 'Montserrat';font-size: 20px;
+}
+</style>
+<title> Joyce Park - Projects</title>
+</head>
 <body>
 
 <!-- Navigation -->
-<nav class="w3-bar w3-black">
-  <a href="index.html" class="w3-button w3-bar-item">Home</a>
-  <a href="about.html" class="w3-button w3-bar-item">About</a>
-  <a href="projects.html" class="w3-button w3-bar-item">Projects</a>
-  <a href="cv.html" class="w3-button w3-bar-item">CV</a>
-  <a href="blog.html" class="w3-button w3-bar-item">Blog</a>
+<nav class="w3-bar w3-white">
+  <a href="index.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-pink">Home</a>
+  <a href="about.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-purple">About</a>
+  <a href="projects.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-orange">Projects</a>
+  <a href="cv.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-blue">CV</a>
+  <a href="blog.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-green">Blog</a>
 </nav>
 
 <!-- Description -->
-<section class="w3-container w3-center w3-content" style="max-width:600px">
-  <h2>Cognitive Offloading</h2>
-  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+<section class="w3-container w3-center w3-content" style="max-width:900px">
+  <h1 class="w3-wide w3-jumbo"><b>Projects</b></h1>
+  <h3 class="w3-left-align">Cognitive Offloading</h3>
+  <p class="w3-left-align">Cognitive offloading is best described...</p>
+  <h3 class="w3-left-align">Effort</h3>
+  <p class="w3-left-align">Blah blah blah</p>
+  <h3 class="w3-left-align">Lecture</h3>
+  <p class="w3-left-align">Blah blah blah</p>
 </section>
 
 <!-- Footer -->
-<footer class="w3-container w3-padding-64 w3-center w3-black w3-xlarge">
+<footer class="w3-container w3-padding-16 w3-center w3-black w3-xlarge">
   <a href="#"><i class="fa fa-facebook-official"></i></a>
   <a href="#"><i class="fa fa-pinterest-p"></i></a>
   <a href="#"><i class="fa fa-twitter"></i></a>
   <a href="#"><i class="fa fa-flickr"></i></a>
   <a href="#"><i class="fa fa-linkedin"></i></a>
-  <p class="w3-medium">
-  Powered by <a href="https://www.w3schools.com/w3css/default.asp" target="_blank">w3.css</a>
+  <p class="w3-medium"> © Joyce Park 2021
   </p>
 </footer>
+<!--script>
+// Automatic Slideshow - change image every 3 seconds
+var myIndex = 0;
+carousel();
+
+function carousel() {
+  var i;
+  var x = document.getElementsByClassName("mySlides");
+  for (i = 0; i < x.length; i++) {
+    x[i].style.display = "none";
+  }
+  myIndex++;
+  if (myIndex > x.length) {myIndex = 1}
+  x[myIndex-1].style.display = "block";
+  setTimeout(carousel, 3000);
+}
+</script-->
 
 </body>
 </html>
