--- a/blog.html
+++ b/blog.html
@@ -28,9 +28,9 @@ body {
 <!-- Description -->
 <section class="w3-container w3-center w3-content" style="max-width:900px">
   <h1 class="w3-wide w3-jumbo"><b>Blog</b></h1>
-  <h3 class="w3-left-align">Title of Blog Post</h3>
-  <p class="w3-left-align">Need to figure out best way to organize posts...</p>
-
+  <!--h3 class="w3-left-align">Title of Blog Post</h3>
+  <p class="w3-left-align">Need to figure out best way to organize posts...</p-->
+  <a href="journal.html" class="w3-left-align w3-hover-white w3-hover-text-green">Dr. Crump's Coding Challenge</a>
 </section>
 
 <!-- Footer -->
