--- a/projects.html
+++ b/projects.html
@@ -28,7 +28,7 @@ body {
 <!-- Description -->
 <section class="w3-container w3-center w3-content" style="max-width:900px">
   <h1 class="w3-wide w3-jumbo"><b>Projects</b></h1>
-  <h3 class="w3-left-align">Cognitive Offloading</h3>
+  <h3 class="w3-left-align">Cognitive Offloading and Value-Directed Remembering</h3>
   <p class="w3-left-align">Cognitive offloading is best described...</p>
   <h3 class="w3-left-align">Effort</h3>
   <p class="w3-left-align">Blah blah blah</p>
