--- a/cv.html
+++ b/cv.html
@@ -25,11 +25,15 @@ body {
   <a href="blog.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-green">Blog</a>
 </nav>
 
+<!-- CV -->
+<h1>Curriculum Vitae</h1>
+    <iframe src="CV_JoycePark.pdf" width="100%" height="500px">
+    </iframe>
 <!-- Description -->
-<section class="w3-container w3-center w3-content" style="max-width:900px">
-  <h1 class="w3-wide w3-jumbo"><b>Curriculum Vitae </b></h1>
+<!--section class="w3-container w3-center w3-content" style="max-width:900px">
+  <h1 class="w3-wide w3-jumbo"><b>Curriculum Vitae </b></h1-->
   <!--p class="w3-opacity"><i>joyce.park@uwaterloo.ca</i></p-->
-  <h3 class="w3-center-align">Education</h3>
+  <!--h3 class="w3-center-align">Education</h3>
   <p class="w3-left-align"><b>BA, University of Waterloo, 2021</b><br>
     <b>Major:</b> Honours Psychology (Research Intensive Specialization)<br>
     <b>Minors:</b> Cognitive Science and French<br>
@@ -67,7 +71,7 @@ body {
   <p class="w3-left-align">Classroom Volunteer, KidsAbility <i>(Sept. 2018 – Dec. 2018)</i></p>
   <p class="w3-left-align">Teacher’s Assistant, Abraham Erb Public School <i>(Jan. 2018 – Apr. 2018)</i></p>
   <p class="w3-left-align">Children's Program Instructor, Stork Family YMCA <i>(June 2017 – Nov. 2019)</i></p>
-  <p class="w3-left-align">Classroom Assistant, Early Childhood Education Center <i>(Jan. 2017 – Apr. 2018)</i></p>
+  <p class="w3-left-align">Classroom Assistant, Early Childhood Education Center <i>(Jan. 2017 – Apr. 2018)</i></p-->
 
   <!--h3 class="w3-center-align">Skills</h3>
   <h4 class="w3-left-align">Research</h4>
@@ -79,7 +83,7 @@ body {
   blah<br>
   blah</p-->
 
-</section>
+<!--/section-->
 
 <!-- Footer -->
 <footer class="w3-container w3-padding-16 w3-center w3-black w3-xlarge">
