--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@ body {
 <nav class="w3-bar w3-white">
   <a href="index.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-pink">Home</a>
   <a href="about.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-purple">About</a>
-  <a href="projects.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-orange">Projects</a>
+  <!--a href="projects.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-orange">Projects</a-->
   <a href="cv.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-blue">CV</a>
   <a href="blog.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-green">Blog</a>
 </nav>
