--- a/blog.html
+++ b/blog.html
@@ -20,7 +20,7 @@ body {
 <nav class="w3-bar w3-white">
   <a href="index.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-pink">Home</a>
   <a href="about.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-purple">About</a>
-  <a href="projects.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-orange">Projects</a>
+  <!--a href="projects.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-orange">Projects</a-->
   <a href="cv.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-blue">CV</a>
   <a href="blog.html" class="w3-button w3-bar-item w3-hover-white w3-hover-text-green">Blog</a>
 </nav>
@@ -30,7 +30,8 @@ body {
   <h1 class="w3-wide w3-jumbo"><b>Blog</b></h1>
   <!--h3 class="w3-left-align">Title of Blog Post</h3>
   <p class="w3-left-align">Need to figure out best way to organize posts...</p-->
-  <a href="journal.html" class="w3-left-align w3-hover-white w3-hover-text-green">Dr. Crump's Coding Challenge</a>
+  <!--a href="journal.html" class="w3-left-align w3-hover-white w3-hover-text-green">Dr. Crump's Coding Challenge</a-->
+  <a href="resources.html" class="w3-left-align w3-hover-white w3-hover-text-green">Resources</a>
 </section>
 
 <!-- Footer -->
